[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing"]}
webpki = "0.22.4"
webpki-roots = "0.25.2"
